# Orbish-GPL

./: .gitignore  CMakeLists.txt  High Click.aif  LICENSE.txt  Orbish.jucer  README.md  THIRD_PARTY_NOTICES.txt  algo-waveform-fragment-shader.xlsx
.github/workflows/: build-windows.yml
Builds/MacOSX/: Low click.aif
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Scripts/: migrate-phase9.sh
Source/: AllocatorThread.cpp  AllocatorThread.h  AudioImporter.cpp  AudioImporter.h  Blinker.hpp  ButtonControlArea.cpp  ButtonControlArea.h  ClickGenerator.h  CommandIDs.h  Context.h  ControlArea.cpp  ControlArea.h  CustomButton.cpp  CustomButton.h  DataExchange.cpp  DataExchange.h  FormattedSlider.cpp  FormattedSlider.hpp  GainModifier.cpp  GainModifier.h  GlobalControlArea.cpp  GlobalControlArea.h  Group.h  GroupControlArea.cpp  GroupControlArea.h  HeaderArea.cpp  HeaderArea.h  HostSynchronizer.cpp  HostSynchronizer.h  ImageViewport.cpp  ImageViewport.h  InfoAndControlArea.cpp  InfoAndControlArea.h  InfoArea.cpp  InfoArea.h  InputControlArea.cpp  InputControlArea.h  InternalSynchronizer.cpp  InternalSynchronizer.h  Layer.cpp  (+86 more)
Tests/: AudioEngineTests.cpp  InitializationTests.cpp  LeakTests.cpp  Makefile  OrbishTests.cpp  TestFixtures.h  ThreadSafetyTests.cpp
exu/: Label.cpp  Label.hpp  UIStateGuard.hpp
ff_meters/: ff_meters.h  ff_meters_LevelMeter.cpp  ff_meters_LevelMeter.h  ff_meters_LevelMeterSource.h  ff_meters_LookAndFeelMethods.h
resources/Bases/: Bells-Triangle 1 Mute.aif  Bells-Triangle 2 Mute.aif  high_dry_click.aif  high_dry_click.aif.asd  low_dry_click.aif  low_dry_click.aif.asd
resources/shaders/: circle.fs  meterBar.fs  meterBar.vs  render.fs  render.vs  thumbnail-playhead.fs  thumbnail-wave.fs
